EDIT MS3 completato

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>ToDoList</title>
 
         <!--Google Fonts-->
         
@@ -37,6 +37,15 @@
         <div class="container">
 
             <div id="app">
+
+
+                <form @submit.prevent="addToDo()" action="">
+                    <input required type="text" name="" id="" v-model="newToDo.text">
+
+                    <button>
+                        Aggiungi
+                    </button>
+                </form>
 
                 <ul>
 
